# FastSAM-Demo

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: health.py  segment.py  upload.py
backend/app/schemas/: segment.py  upload.py
backend/app/services/: image_service.py  sam_service.py
backend/app/utils/: mask_encoder.py
backend/tests/: test_api.py  test_image_service.py  test_mask_encoder.py
docs/: README.md  api.md  architecture.md  backend.md  deployment.md  frontend.md  interview-guide.md  model.md  quickstart.md  troubleshooting.md
frontend/: Dockerfile  index.html  index.html.bak  next.config.ts  nginx.conf  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ControlPanel.tsx  ExportButton.tsx  Header.tsx  ImageUploader.tsx  MaskList.tsx  SegmentCanvas.tsx  StatusBadge.tsx
frontend/src/hooks/: useHealthCheck.ts  useSegmentation.ts
frontend/src/lib/: api.ts  constants.ts  mask.ts
frontend/src/types/: index.ts
